@@ -1,5 +1,12 @@
 2005-06-05  Maciej Stachowiak  <mjs@apple.com>
 
+        - added file type and NSURLResponse caching SPI
+
+        * WebKitSystemInterface.h:
+        * libWebKitSystemInterface.a:
+
+2005-06-05  Maciej Stachowiak  <mjs@apple.com>
+
 	- initial checkin of WebKitSystemInterface binary
 
         * WebKitSystemInterface.h: Added.
